<resources>
    <string name="app_name">iBeacon Gate</string>
    <string name="Loading">Loading…</string>
    <string name="name">姓名</string>
    <string name="gender">性別</string>
    <string name="id_num">身分證字號</string>
    <string name="phone_num">手機號碼</string>
    <string name="email">E-mail</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="signup">註冊</string>
    <string name="visitor">VISITOR</string>
    <string name="personal_if">個人資料</string>
    <string name="qrcode">掃描Qr Code</string>
    <string name="build_customer_if">建立用戶資料</string>
    <string name="profile">Profile</string>
    <string name="qrcodescanner">QR Code Scanner</string>
    <string name="setting">Setting</string>
    <string name="save">儲存</string>
    <string name="entry_reason">事由</string>
    <string name="beacon_advertising">藍牙信標廣播中…</string>
    <string name="beacon_advertise_not_working">藍牙信標廣播異常</string>
    <string name="scanning_result_not_uuid">掃描結果非UUID</string>
</resources>