<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/entry_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/entry_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#3F5C2C2C"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="#88000000"
        android:textColorLink="#FFFFFF"
        android:textColor="#000000"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/entry_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image" />

    <EditText
        android:id="@+id/entry_gender"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#3F5C2C2C"
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="text"
        android:textColorHint="#88000000"
        android:textColorLink="#FFFFFF"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/entry_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_name" />

    <EditText
        android:id="@+id/entry_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#3F5C2C2C"
        android:ems="10"
        android:hint="@string/id_num"
        android:inputType="text"
        android:textColorHint="#88000000"
        android:textColorLink="#FFFFFF"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/entry_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_gender" />

    <EditText
        android:id="@+id/entry_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#3F5C2C2C"
        android:ems="10"
        android:hint="@string/phone_num"
        android:inputType="phone"
        android:textColorHint="#88000000"
        android:textColorLink="#FFFFFF"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/entry_reason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_id" />

    <EditText
        android:id="@+id/entry_reason"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#3F5C2C2C"
        android:ems="10"
        android:hint="@string/entry_reason"
        android:inputType="text"
        android:textColorHint="#88000000"
        android:textColorLink="#FFFFFF"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/storeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_phone" />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_reason" />
</androidx.constraintlayout.widget.ConstraintLayout>